--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,49 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{{ page.title }}</title>
-        <meta name="viewport" content="width=device-width">
+  <head>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+      <title>{{ page.title }}</title>
+      <meta name="viewport" content="width=device-width">
 
-        <!-- syntax highlighting CSS -->
-        <link rel="stylesheet" href="/css/syntax.css">
+      <!-- syntax highlighting CSS -->
+      <link rel="stylesheet" href="/assets/css/syntax.css">
 
-        <!-- Loading Bootstrap -->
-        <link href="/css/bootstrap3.css" rel="stylesheet">
-        <link href="/css/bootstrap-glyphicons.css" rel="stylesheet">
+      <!-- Loading Bootstrap
+      <link href="/css/bootstrap3.css" rel="stylesheet">
+      <link href="/css/bootstrap-glyphicons.css" rel="stylesheet">
+       -->
 
-        <!-- Custom CSS -->
-        <link rel="stylesheet" href="/css/site.css">
+      <!-- Custom CSS -->
+      <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic">
+      <link rel="icon" type="image/png" href="/assets/img/me.png">
+      <link href="/feed.rss" rel="alternate" type="application/rss+xml" title="Ilkka Huotari's rss" />
+      <link rel="stylesheet" href="/assets/css/site.css">
+      <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+  </head>
+  <body>
+    <div class="container">
+      {% include header.html %}
+      <div class="content">
+        {{ content }}
+      </div>
+      {% include footer.html %}
+    </div> <!-- /container -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    </head>
-    <body>
+      ga('create', 'UA-18458686-6', 'ilkkah.com');
+      ga('send', 'pageview');
 
-        <div class="container site">
-          <div class="page-header">
-            <div class="pull-right">
-            {% if page.path and site.github.repo and site.github.branch %}
-              <div class="post-edit">
-                <a class="glyphicon glyphicon-edit pull-right" href="http://prose.io/#{{ site.github.repo }}/edit/{{ site.github.branch }}/{{ page.path }}"></a>
-              </div> 
-            {% endif %}
-            {% if page.date %}
-              <div class="page-date pull-right">{{ page.date | date_to_string }}</div>
-            {% endif %}
-            </div>
-            <h1 class="title">{% if page.url != '/' %}<a href="/" title="{{ site.name }}">..</a>{% endif %} {{ page.title }}  <!-- Edit current page -->
-              <div >
-                <small class="description">
-                  {{ page.description }}
-                </small>
-              </div>
-            </h1>
-            </div>
-          <div class="content">
-            {{ content }}
-          </div>
-          {{ if site.signature }}<i class="pull-right">{{ site.signature }}</i>{{ endif }}
-        </div> <!-- /container -->
-
-    </body>
+      $(document).ready(function() {
+          $('a[href^="http"]').filter(function() {
+              return this.hostname && this.hostname !== location.hostname && this.hostname !== 'prose.io';
+          }).attr('target', '_blank');  
+      });
+    </script>
+  </body>
 </html>
