--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,10 @@
 layout: default
 ---
 
-<div class="post">
+<article class="blog">
+	<div class="header">
+		<span class="date">{{ page.date | date_to_string }}</span>
+		<h1>{{ page.title }}</h1>
+	</div>
   <div class="content">{{ content }}</div>
-</div>
+</article>
