--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header id="nav">
   <div class="inner">
-    <h1><a href="/"><img src="/assets/img/me.png"></a></h1>
+    <h1><a href="/"><img src="/assets/img/me.jpg"></a></h1>
   </div>
 </header>
 
