--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header id="nav">
   <div class="inner">
-    <h1><a href="/"><img src="/assets/img/me.jpg"></a></h1>
+    <h1><a href="/"><img src="https://0.gravatar.com/avatar/ed1112b7c4a08b9da7b6148dbfd6ff9b"></a></h1>
   </div>
 </header>
 
