--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
        -->
 
       <!-- Custom CSS -->
-      <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic">
+      <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400' rel='stylesheet' type='text/css'>
       <link rel="icon" type="image/png" href="/assets/img/me.png">
       <link href="/feed.rss" rel="alternate" type="application/rss+xml" title="Ilkka Huotari's rss" />
       <link rel="stylesheet" href="/assets/css/site.css">
