--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,15 @@
 <footer>
   <div class="inner">
     <p>&copy; <a href="/contact/">Ilkka Huotari 2013</a>
-    	{% if page.path and site.github.repo and site.github.branch %}
-    	    &mdash;  <a class="" href="http://prose.io/#{{ site.github.repo }}/edit/{{ site.github.branch }}/{{ page.path }}">edit this page</a>
-    	{% endif %}
     </p>
-    <p><a href="/feed.rss">rss</a></p>
-    <p><a target="_blank" href="https://github.com/ile/"><span class="github-logo logo"></span></a> <a href="/contact"><span class="gmail-logo logo"></span></a></p>
+    <ul class="icons">
+    	<li><a target="_blank" href="https://github.com/ile/"><span class="github-logo logo"></span></a>
+    	<li><a href="/contact"><span class="gmail-logo logo"></span></a>
+		<li><a href="/feed.rss">rss</a></p>
+	</ul>
+	{% if page.path and site.github.repo and site.github.branch %}
+	    <p><a class="" href="http://prose.io/#{{ site.github.repo }}/edit/{{ site.github.branch }}/{{ page.path }}">edit this page</a></p>
+	{% endif %}    
   </div>
 </footer>
 
