--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
 
       <!-- Custom CSS -->
       <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400' rel='stylesheet' type='text/css'>
-      <link rel="icon" type="image/png" href="/assets/img/me.png">
+      <link rel="icon" type="image/png" href="https://0.gravatar.com/avatar/ed1112b7c4a08b9da7b6148dbfd6ff9b">
       <link href="/feed.rss" rel="alternate" type="application/rss+xml" title="Ilkka Huotari's rss" />
       <link rel="stylesheet" href="/assets/css/site.css">
       <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
