--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
     <ul class="icons">
     	<li><a target="_blank" href="https://github.com/ile/"><span class="github-logo logo"></span></a>
     	<li><a href="/contact"><span class="gmail-logo logo"></span></a>
-		<li><a href="/feed.rss"><img class="logo" src="assets/img/rss.png"></a></p>
+		<li><a href="/feed.rss"><img class="logo" src="/assets/img/rss.png"></a></p>
 	</ul>
 	{% if page.path and site.github.repo and site.github.branch %}
 	    <p><a class="" href="http://prose.io/#{{ site.github.repo }}/edit/{{ site.github.branch }}/{{ page.path }}">edit this page</a></p>
