--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,6 +4,7 @@
     <ul class="icons">
     	<li><a target="_blank" href="https://github.com/ile/"><span class="github-logo logo"></span></a>
 		<li><a href="http://www.flickr.com/photos/ile/" title="See my photos on Flickr!"><img src="https://s.yimg.com/pw/images/goodies/black-small-circle.png" class="logo"  alt=""></a></li>
+		<li><a href="http://www.fluidr.com/photos/ile"><img src="/assets/img/fluidr.png" class="logo"></a></li>
 		<li><a href="/feed.rss"><img class="logo" src="/assets/img/rss.png"></a></p>
 	</ul>
 	{% if page.path and site.github.repo and site.github.branch %}
