--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -66,7 +66,7 @@ a {
   color: #225a93;
   color: #2766A5;
   color: #A52727;
-  font-weight: bold;
+  font-weight: 400;
   text-decoration: none;
 }
 
