--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
 		<li><a href="http://www.fluidr.com/photos/ile"><img src="/assets/img/fluidr.png" class="logo"></a></li>
 		<li><a href="/feed.rss"><img class="logo" src="/assets/img/rss.png"></a></p>
 	</ul>
-	{% if page.path and site.github.repo and site.github.branch %}
+	{% false and if page.path and site.github.repo and site.github.branch %}
 	    <p><a class="" href="http://prose.io/#{{ site.github.repo }}/edit/{{ site.github.branch }}/{{ page.path }}">edit this page</a></p>
 	{% endif %}
   </div>
