--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
       <link rel="stylesheet" href="/assets/bower_components/fancybox/source/jquery.fancybox.css" type="text/css" media="screen" />
       <script type="text/javascript" src="/assets/bower_components/fancybox/source/jquery.fancybox.pack.js"></script>
   </head>
-  <body>
+  <body class="{{ page.home }}">
     <div class="container">
       {% include header.html %}
       <div class="content">
