--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,9 +5,11 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
       <title>{{ page.title }}</title>
       <meta name="viewport" content="width=device-width">
+      <link rel="stylesheet" href="/assets/css/site.css">
 
-      <!-- syntax highlighting CSS -->
+      <!-- syntax highlighting CSS
       <link rel="stylesheet" href="/assets/css/syntax.css">
+       -->
 
       <!-- Loading Bootstrap
       <link href="/css/bootstrap3.css" rel="stylesheet">
@@ -18,7 +20,6 @@
       <link href='//fonts.googleapis.com/css?family=Open+Sans:300,400' rel='stylesheet' type='text/css'>
       <link rel="icon" type="image/png" href="https://0.gravatar.com/avatar/ed1112b7c4a08b9da7b6148dbfd6ff9b">
       <link href="/feed.rss" rel="alternate" type="application/rss+xml" title="Ilkka Huotari's rss" />
-      <link rel="stylesheet" href="/assets/css/site.css">
       <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
       <link rel="stylesheet" href="/assets/bower_components/fancybox/source/jquery.fancybox.css" type="text/css" media="screen" />
       <script type="text/javascript" src="/assets/bower_components/fancybox/source/jquery.fancybox.pack.js"></script>
