--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
       */
 
       $(document).ready(function() {
-          $('a[href^="http"]').filter(function() {
+          $('article.blog a[href^="http"]').filter(function() {
               return this.hostname && this.hostname !== location.hostname && this.hostname !== 'prose.io';
           }).attr('target', '_blank');  
       });
