--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,16 @@
 <header id="nav">
   <div class="inner">
-    <h1><a href="/"><img src="https://0.gravatar.com/avatar/ed1112b7c4a08b9da7b6148dbfd6ff9b"></a></h1>
+    <ul>
+      <li class="pull-left">
+        <a href="/">ilkka huotari</a>
+      </li>
+      <li>
+        <a href="/projects">projects</a>
+      </li>
+      <li>
+        <a href="/contact">contact</a>
+      </li>
+    </ul>
   </div>
 </header>
 
