--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
       <li>
         <a href="/projects">projects</a>
       </li>
-      <li>
+      <li class="ml">
         <a href="/contact">contact</a>
       </li>
     </ul>
