--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,8 +6,8 @@
 		<li><a href="http://www.flickr.com/photos/ile/" title="See my photos on Flickr!"><img src="https://s.yimg.com/pw/images/goodies/black-small-circle.png" class="logo"  alt=""></a></li>
 		<li><a href="/feed.rss"><img class="logo" src="/assets/img/rss.png"></a></p>
 	</ul>
-	<p>{% page %}</p>
-	<p>{% node.url %}</p>
+	<p>{{ page.url }}</p>
+	<p>{{ node.url }}</p>
   </div>
   
 </footer>
