--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,3 +9,11 @@ layout: default
 	</div>
   <div class="content">{{ content }}</div>
 </article>
+<div id="post-nav" class="clearfix">
+  {% if page.previous.url %} 
+    <a class="prev" rel="prev" href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a> 
+  {% endif %} 
+  {% if page.next.url %} 
+    <a class="next" rel="next" href="{{page.next.url}}">{{page.next.title}} &raquo;</a> 
+  {% endif %} 
+</div>
