--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header id="nav">
   <div class="inner">
     <ul>
-      <li class="pull-left {% if page.url == '/' %}selected{% endif %}">
+      <li class="pull-left">
         <a href="/">ilkka huotari</a> <img src="https://0.gravatar.com/avatar/ed1112b7c4a08b9da7b6148dbfd6ff9b" class="round">
       </li>
       <li class="{% if page.url == '/projects/' %}selected{% endif %}">
