--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,6 +2,7 @@
   <div class="inner">
     <p>&copy; <a href="/contact/">Ilkka Huotari 2014</a> &bullet; <a href="/contact/">Contact</a></p>
 	<ul class="icons">
+    		<li><a target="_blank" href="https://twitter.com/ilkkah"><span class="twitter-logo logo"></span></a>
     		<li><a target="_blank" href="https://github.com/ile/"><span class="github-logo logo"></span></a>
 		<li><a href="http://www.flickr.com/photos/ile/" title="See my photos on Flickr!"><img src="https://s.yimg.com/pw/images/goodies/black-small-circle.png" class="logo"  alt=""></a></li>
 		<li><a href="/feed.rss"><img class="logo" src="/assets/img/rss.png"></a></p>
