--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,15 @@
       });
 
       $(document).ready(function() {
-        $("article.blog a[href$='.jpg'],article.blog a[href$='.jpeg'],article.blog a[href$='.png'],article.blog a[href$='.gif']").magnificPopup({type:'image'});
+        $("article.blog a[href$='.jpg'],article.blog a[href$='.jpeg'],article.blog a[href$='.png'],article.blog a[href$='.gif']").magnificPopup({
+          type:'image',
+          zoom: {
+            enabled: true
+          },
+          gallery:{
+            enabled:true
+          }
+        });
       });
 
     </script>
