--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,12 @@
           },
           gallery:{
             enabled:true
-          }
+          },
+          removalDelay: 300,
+        
+          // Class that is added to popup wrapper and background
+          // make it unique to apply your CSS animations just to this exact popup
+          mainClass: 'mfp-fade'
         });
       });
 
