--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,6 +43,7 @@
       $(document).ready(function() {
         $("article.blog a[href$='.jpg'],article.blog a[href$='.jpeg'],article.blog a[href$='.png'],article.blog a[href$='.gif']").magnificPopup({
           type:'image',
+          overflowY:'scroll',
           zoom: {
             enabled: true
           },
