--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,6 +47,7 @@
           zoom: {
             enabled: true
           },
+          titleSrc: 'alt',
           gallery:{
             enabled:true
           },
