--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
           zoom: {
             enabled: true
           },
-          titleSrc: 'alt',
+          titleSrc: 'title',
           gallery:{
             enabled:true
           },
