--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,6 +6,7 @@ layout: default
 	<div class="header">
 		<span class="date">{{ page.date | date_to_string }}</span>
 		<h1>{{ page.title }}</h1>
+		<h2>{{ page.subtitle }}</h2>
 	</div>
 	<div class="content">{{ content }}</div>
 	<div id="post-nav" class="clearfix">
