--- a/_layouts/bare.html
+++ b/_layouts/bare.html
@@ -4,8 +4,16 @@
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
       <title>{{ page.title }}</title>
+      <style>
+        .contents {
+          margin: auto;
+          max-width:700px;
+        }
+      </style>
   </head>
   <body>
+    <div class="contents">
     {{ content }}
+    </div>
   </body>
 </html>
