--- a/_layouts/bare.html
+++ b/_layouts/bare.html
@@ -7,7 +7,11 @@
       <style>
         .contents {
           margin: auto;
-          max-width:700px;
+          max-width: 800px;
+          font-size: 20px;
+          line-height: 1.5;
+          font-family: Georgia;
+          color: #333;
         }
       </style>
   </head>
