--- a/_layouts/bare.html
+++ b/_layouts/bare.html
@@ -7,10 +7,10 @@
       <style>
         .contents {
           margin: auto;
-          max-width: 800px;
-          font-size: 20px;
-          line-height: 1.5;
-          font-family: Georgia;
+          max-width: 750px;
+          font-size: 17px;
+          line-height: 1.6;
+          font-family: sans-serif;
           color: #333;
         }
       </style>
