--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <div class="inner">
     <ul>
       <li class="pull-left">
-        <a href="/">ilkka huotari</a> <img src="https://0.gravatar.com/avatar/ed1112b7c4a08b9da7b6148dbfd6ff9b" class="round">
+        <a href="/"><img src="https://0.gravatar.com/avatar/ed1112b7c4a08b9da7b6148dbfd6ff9b" class="round"></a>
       </li>
       <li class="{% if page.url == '/projects/' %}selected{% endif %}">
         <a href="/projects">projects</a>
