--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -32,3 +32,12 @@ layout: default
 	  {% endif %} 
 	</div>
 </article>
+{% if page.title %}
+  <meta content="{{ page.title }}" property="og:title">
+{% endif %}
+{% if page.description %}
+  <meta content="{{ page.description }}" property="og:description">
+{% endif %}
+{% if page.image %}
+  <meta content="{{ page.image }}" property="og:image">
+{% endif %}
