--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,10 @@
 <header id="nav">
   <div class="inner">
     <ul>
-      <li class="pull-left">
+      <li>
         <a href="/"><img src="https://0.gravatar.com/avatar/ed1112b7c4a08b9da7b6148dbfd6ff9b" class="round"></a>
       </li>
-      <li class="ml {% if page.url == '/contact/' %}selected{% endif %}">
+      <li class="ml {% if page.url == '/contact/' %}selected{% endif %} pull-right">
         <a href="/contact">contact</a>
       </li>
     </ul>
